--- a/package.json
+++ b/package.json
@@ -17,4 +17,23 @@
     "type": "git",
     "url": "git+https://github.com/kuznetsovlv/react-app-carcass"
   },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "unit-kuznetsov": "^1.1.1",
+    "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "bemclassnames": "^1.0.4",
+    "classnames": "^2.2.5",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  }
 }
