Configured karma and jasmine, statistics does not work correctly

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Carcass for react applications",
   "main": "dist/index.js",
   "scripts": {
-    "test": "karma start",
-    "devserver": "webpack-dev-server --debug --hot --devtool eval-sorce-map --output-pathinfo --watch --color --inline --content-base test --port 8080 --host 0.0.0.0",
+    "test": "karma start karma.conf.js",
+    "devserver": "webpack-dev-server --debug --hot --devtool eval-sorce-map --output-pathinfo --watch --color --inline --content-base dev --port 8080 --host 0.0.0.0",
     "build": "webpack -p",
     "devBuild": "webpack -d",
     "start": "npm-run-all --parallel devserver devBuild test"
@@ -34,16 +34,18 @@
     "jasmine": "^2.6.0",
     "jasmine-core": "^2.6.1",
     "karma": "^1.6.0",
-    "karma-chrome-launcher": "^2.1.0",
     "karma-coverage": "^1.1.1",
+    "karma-es6-shim": "^1.0.0",
     "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs2-launcher": "^0.5.0",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-webpack": "^2.0.3",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "sass-loader": "^6.0.3",
+    "sourcemap-istanbul-instrumenter-loader": "^0.2.0",
     "unit-kuznetsov": "^1.1.1",
     "url-loader": "^0.5.8",
     "webpack": "^1.14.0",
